--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -2,42 +2,45 @@
     width: 320px;
     margin: 50px auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #f3a6b4;
     border-radius: 8px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
+    background-color: #ffffff;
     text-align: center;
 }
 
 h2 {
     margin-bottom: 20px;
-    color: #333;
+    color: #a64d64;
 }
 
 form {
     display: flex;
     flex-direction: column;
+    gap: 5px;
 }
 
 label {
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     text-align: left;
     display: block;
+    color: #a64d64;
 }
 
 input {
     width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
+    padding: 8px;
+    margin-bottom: 0px;
+    border: 1px solid #f3a6b4;
     border-radius: 4px;
     font-size: 14px;
+    box-sizing: border-box;
 }
 
 button {
     padding: 10px;
-    background-color: #28a745;
+    background-color: #2a76d2 !important;
     color: white;
     border: none;
     border-radius: 4px;
@@ -46,16 +49,17 @@ button {
 }
 
 button:hover {
-    background-color: #218838;
+    background-color: #0473fa !important;
 }
 
 p {
     margin-top: 10px;
     font-size: 14px;
+    color: #0f0e0e;
 }
 
 p a {
-    color: #007bff;
+    color: #e57392;
     text-decoration: none;
 }
 
@@ -64,7 +68,7 @@ p a:hover {
 }
 
 p.message {
-    color: red;
+    color: #c0392b;
     font-size: 14px;
     margin-top: 10px;
 }
