--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -16,7 +16,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("https://images.unsplash.com/photo-1516733725897-1aa73b87c8e8") no-repeat center center;
+    /*background: url("https://images.unsplash.com/photo-1516733725897-1aa73b87c8e8") no-repeat center center;*/
     background-size: cover;
     opacity: 0.2;
     pointer-events: none;
